--- a/src/app/components/equipamento/equipamento-update/equipamento-update.component.html
+++ b/src/app/components/equipamento/equipamento-update/equipamento-update.component.html
@@ -2,7 +2,7 @@
 <mat-card class="container">
     <mat-card-title>Atualizar Equipamento</mat-card-title>
     <form class="formulario">
-        <!-- <span class="info">(*) preenchimento obrigatório</span> -->
+        <span class="info">(*) preenchimento obrigatório</span>
 
         <mat-form-field class="inputPlaca" appearance="outline" color="accent">
             <mat-label>Cód. Equipamento</mat-label>
