--- a/src/app/components/nivel-lotacao/nivel-lotacao.component.html
+++ b/src/app/components/nivel-lotacao/nivel-lotacao.component.html
@@ -19,7 +19,7 @@
                 <mat-icon fontSet="material-icons-outlined">play_circle_outlined</mat-icon>
                 <span class="textButton"> Start</span>
             </button>
-            <button style="background-color: #f86a6a;" mat-raised-button (click)="stopMostrarNivel()">
+            <button style="background-color: #e35e6b;" mat-raised-button (click)="stopMostrarNivel()">
                 <mat-icon fontSet="material-icons-outlined">stop_circle</mat-icon>
                 <span class="textButton"> Stop</span>
             </button>
