--- a/src/app/components/usuario/usuario-update/usuario-update.component.html
+++ b/src/app/components/usuario/usuario-update/usuario-update.component.html
@@ -2,7 +2,7 @@
 <mat-card class="container">
     <mat-card-title>Atualizar usuário</mat-card-title>
     <form class="formulario">
-        <span class="info">(*) preenchimento obrigatório</span>
+        <!-- <span class="info">(*) preenchimento obrigatório</span> -->
         <!-- <mat-form-field class="inputId" appearance="outline" color="accent">
             <mat-label>Id</mat-label>
             <input type="number" matInput [(ngModel)]="usuario.id" name="id" disabled>
