--- a/src/app/components/nivel-lotacao/nivel-lotacao.component.html
+++ b/src/app/components/nivel-lotacao/nivel-lotacao.component.html
@@ -3,7 +3,7 @@
         <div class="filtro">
             <mat-form-field class="inputCodEquipamento" appearance="legacy" color="accent">
                 <mat-label class="texto">Veiculo</mat-label>
-                <select class="texto" matNativeControl [(ngModel)]="selectedVeiculo" name="veiculo">
+                <select [disabled]="botaoStart" class="texto" matNativeControl [(ngModel)]="selectedVeiculo" name="veiculo">
                     <option value="" selected></option>
                     <option *ngFor="let veiculo of veiculos.content" [value]="veiculo.id">
                         {{veiculo.placaVeiculo}} - {{veiculo.modeloVeiculo}}
@@ -15,11 +15,11 @@
                 <mat-icon fontSet="material-icons-outlined">analytics</mat-icon>
                 <span class="textButton"> Mostrar Nivel de Lotação</span>
             </button> -->
-            <button style="background-color: #B6D7A8;" mat-raised-button (click)="mostrarNivel()">
+            <button class="botaoStart" [disabled]="botaoStart" mat-raised-button (click)="mostrarNivel()">
                 <mat-icon fontSet="material-icons-outlined">play_circle_outlined</mat-icon>
                 <span class="textButton"> Start</span>
             </button>
-            <button style="background-color: #e35e6b;" mat-raised-button (click)="stopMostrarNivel()">
+            <button class="botaoStop" [disabled]="botaoStop" mat-raised-button (click)="stopMostrarNivel()">
                 <mat-icon fontSet="material-icons-outlined">stop_circle</mat-icon>
                 <span class="textButton"> Stop</span>
             </button>
