--- a/src/app/views/home/home.component.css
+++ b/src/app/views/home/home.component.css
@@ -9,7 +9,6 @@
 } 
 
 mat-grid-tile {
-    /* background: lightblue; */
     padding: 0px;
     margin: 0px;
 }
@@ -23,6 +22,7 @@ button {
     height: 100%;
     background-color: #555;
     border-radius: 10px;
+    margin-top: 1px;
 }
 
 .text-menu {
