--- a/src/app/components/usuario/usuario-read/usuario-read.component.html
+++ b/src/app/components/usuario/usuario-read/usuario-read.component.html
@@ -55,6 +55,12 @@
       <td mat-cell *matCellDef="let row">{{row.empresa.empresa_nome}}</td>
     </ng-container>
 
+    <!-- nivelAcesso Column -->
+    <ng-container matColumnDef="nivelAcesso">
+      <th mat-header-cell *matHeaderCellDef>Nível de Acesso</th>
+      <td mat-cell *matCellDef="let row">{{row.nivelAcesso}}</td>
+    </ng-container>
+
     <!-- Action Column -->
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Ações</th>
