--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -9,7 +9,7 @@
         <div class="usuarioLogado">
             <!-- <span >Olá, {{userName| titlecase}}</span> -->
             <mat-icon class="icon">account_circle</mat-icon>
-            <span> {{userName| titlecase}}</span>
+            <span> {{userName| titlecase}} ({{nivelAcesso}})</span>
         </div>
         <div class="menu-button">
             <app-menu-button></app-menu-button>
