--- a/src/app/views/login/login.component.css
+++ b/src/app/views/login/login.component.css
@@ -75,7 +75,7 @@
     margin-top: 8px;
     padding: 7px;
     font-size: 16px;
-    color: #9FC5F8;
+    color: #71a9f1;
     border-radius: 2px;
     border: 1px solid #ccddef;
     outline-color: #9FC5F8;
