cleaning in code

--- a/src/app/components/equipamento/equipamento-delete/equipamento-delete.component.html
+++ b/src/app/components/equipamento/equipamento-delete/equipamento-delete.component.html
@@ -18,11 +18,6 @@
             <input matInput [(ngModel)]="equipamento.statusEquipamento" name="statusEquipamento" disabled> 
         </mat-form-field>
 
-        <!-- <mat-form-field class="inputEmpresaID" appearance="outline" color="accent">
-            <mat-label>Empresa ID</mat-label>
-            <input type="number" matInput [(ngModel)]="equipamento.empresa.id" name="empresaId" disabled>
-        </mat-form-field> -->
-
         <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
             <mat-label>Empresa</mat-label>
             <input matInput [(ngModel)]="equipamento.empresa.empresa_nome" name="empresa" disabled>
@@ -30,15 +25,16 @@
 
     </form>
     <div class="botoes">
+
         <button class="botaoSalvar" mat-raised-button (click)="deleteEquipamento()">
-            <mat-icon fontSet="material-icons-outlined">delete</mat-icon>
+            <mat-icon>delete</mat-icon>
             <span class="textButton">Excluir</span>
         </button>
+
         <button class="botaoCancelar" mat-raised-button (click)="cancel()">
-            <mat-icon fontSet="material-icons-outlined">close</mat-icon>
+            <mat-icon>close</mat-icon>
             <span class="textButton">Cancelar</span>
         </button>
+
     </div>
 </mat-card>
-
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet"/>
