--- a/src/app/components/usuario/usuario-create/usuario-create.component.html
+++ b/src/app/components/usuario/usuario-create/usuario-create.component.html
@@ -1,34 +1,28 @@
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet" />
 <app-header></app-header>
 <mat-card class="container">
     <mat-card-title>Cadastrar Usuário</mat-card-title>
     <form class="formulario">
+
         <span class="info">(*) preenchimento obrigatório</span>
+
         <mat-form-field class="inputNome" appearance="outline" color="accent">
             <mat-label>Nome (usuário)</mat-label>
             <input matInput [(ngModel)]="usuario.nome" name="nome" required>
         </mat-form-field>
+
         <mat-form-field class="inputSenha" appearance="outline" color="accent">
             <mat-label>Senha</mat-label>
             <input type="password" matInput [(ngModel)]="usuario.senha" name="senha" required>
         </mat-form-field>
+
         <mat-form-field class="inputSenha" appearance="outline" color="accent">
             <mat-label>Confirmação Senha</mat-label>
             <input type="password" matInput [(ngModel)]="senhaCheck" name="senhaCheck" required>
         </mat-form-field>
-        <!-- <mat-form-field class="inputEmpresaId" appearance="outline" color="accent">
-            <mat-label>Empresa ID</mat-label>
-            <input type="number" matInput [(ngModel)]="usuario.empresaId" name="empresaId" required>
-        </mat-form-field> -->
-        <!-- <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
-            <mat-label>Empresa</mat-label>
-            <input matInput [(ngModel)]="usuario.empresa" name="empresa" required>
-        </mat-form-field> -->
 
         <mat-form-field appearance="outline" color="accent">
             <mat-label>Nivel de Acesso</mat-label>
-            <select [disabled]="inputNivelAcesso" matNativeControl [(ngModel)]="selectedNivelAcesso" name="nivelAcesso"
-                required>
+            <select [disabled]="inputNivelAcesso" matNativeControl [(ngModel)]="selectedNivelAcesso" name="nivelAcesso" required>
                 <!-- <option value="usuario" selected></option> -->
                 <option *ngFor="let nivel of niveis" [value]="nivel.value">
                     {{nivel.viewValue}}
@@ -38,7 +32,7 @@
 
         <mat-form-field appearance="outline" color="accent">
             <mat-label>Empresa</mat-label>
-            <select [disabled]="inputEmpresa" matNativeControl [(ngModel)]="selectedEmpresa" name="empresa">
+            <select [disabled]="inputEmpresa" matNativeControl [(ngModel)]="selectedEmpresa" name="empresa" required>
                 <option value="" selected></option>
                 <option *ngFor="let empresa of empresas.content" [value]="empresa.id">
                     {{empresa.empresa_nome}}
@@ -48,13 +42,16 @@
 
     </form>
     <div class="botoes">
+
         <button class="botaoSalvar" mat-raised-button (click)="createUsuario()">
-            <mat-icon fontSet="material-icons-outlined">save</mat-icon>
+            <mat-icon >save</mat-icon>
             <span class="textButton">Salvar</span>
         </button>
+
         <button class="botaoCancelar" mat-raised-button (click)="cancel()">
-            <mat-icon fontSet="material-icons-outlined">close</mat-icon>
+            <mat-icon>close</mat-icon>
             <span class="textButton">Cancelar</span>
         </button>
+        
     </div>
 </mat-card>
