--- a/src/app/components/equipamento/equipamento-create/equipamento-create.component.html
+++ b/src/app/components/equipamento/equipamento-create/equipamento-create.component.html
@@ -19,44 +19,23 @@
             <input matInput [(ngModel)]="equipamento.statusEquipamento" name="statusEquipamento" disabled> 
         </mat-form-field>
 
-        <!-- <mat-form-field class="inputEmpresaID" appearance="outline" color="accent">
-            <mat-label>Empresa ID</mat-label>
-            <input type="number" matInput [(ngModel)]="equipamento.empresa.id" name="empresaId" disabled>
-        </mat-form-field> -->
-
         <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
             <mat-label>Empresa</mat-label>
             <input matInput [(ngModel)]="equipamento.empresa.empresa_nome" name="empresa" disabled>
-        </mat-form-field>
-
-
-        <!-- Só adaptar o dropDown para equipamento -->
-
-        <!-- Exemplo de como inserir conteudo do banco na DropDown List -->
-        <!-- <mat-form-field class="inputCodEquipamento" appearance="outline" color="accent">
-            <mat-label>Veiculos da empresa</mat-label>
-            <select matNativeControl [(ngModel)]="selectedVeiculo" name="veiculo">
-                <option value="" selected></option>
-                <option *ngFor="let veiculo of veiculosEmpresa.content" [value]="veiculo.placaVeiculo">
-                    Placa: {{veiculo.placaVeiculo}} -
-                    Modelo: {{veiculo.modeloVeiculo}} -
-                    Linha: {{veiculo.numeroLinha}} -
-                    EmpresaID: {{veiculo.empresaId}}
-                </option>
-            </select>
-        </mat-form-field> -->
+        </mat-form-field>        
 
     </form>
     <div class="botoes">
+
         <button class="botaoSalvar" mat-raised-button (click)="createEquipamento()">
-            <mat-icon fontSet="material-icons-outlined">save</mat-icon>
+            <mat-icon>save</mat-icon>
             <span class="textButton">Salvar</span>
         </button>
+
         <button class="botaoCancelar" mat-raised-button (click)="cancel()">
-            <mat-icon fontSet="material-icons-outlined">close</mat-icon>
+            <mat-icon>close</mat-icon>
             <span class="textButton">Cancelar</span>
         </button>
+        
     </div>
 </mat-card>
-
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet"/>
