--- a/src/app/components/historico/historico-read/historico-read.component.html
+++ b/src/app/components/historico/historico-read/historico-read.component.html
@@ -8,12 +8,12 @@
             </button>
 
             <button mat-raised-button (click)="CriaPDF()">
-                <mat-icon fontSet="material-icons-outlined">picture_as_pdf</mat-icon>
+                <mat-icon>picture_as_pdf</mat-icon>
                 <span class="textButton"> Criar PDF</span>
             </button>
 
             <button class="botaoNivelLotacao" mat-raised-button (click)="nivelDeLotacao()">
-                <mat-icon fontSet="material-icons-outlined">visibility</mat-icon>
+                <mat-icon>visibility</mat-icon>
                 <span class="textButton"> Nível de Lotação</span>
             </button>
 
@@ -40,17 +40,13 @@
                     </option>
                 </select>
             </mat-form-field>
+            
         </div>
     </div>
 
     <div id="tabela">
         <table mat-table [dataSource]="historicosEmpresa.content" class="mat-elevation-z4">
-            <!-- id Column -->
-            <!-- <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef>ID</th>
-                <td mat-cell *matCellDef="let row">{{row.id}}</td>
-            </ng-container> -->
-
+            
             <!-- datahora Column -->
             <ng-container matColumnDef="datahora">
                 <th mat-header-cell *matHeaderCellDef>Data/Hora</th>
@@ -88,5 +84,3 @@
             [length]="totalSize" [showFirstLastButtons]="true" (page)="getPaginatorData($event)"></mat-paginator>
     </div>
 </div>
-
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet"/>
