--- a/src/app/components/usuario/usuario-delete/usuario-delete.component.html
+++ b/src/app/components/usuario/usuario-delete/usuario-delete.component.html
@@ -1,38 +1,36 @@
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet"/>
 <app-header></app-header>
 <mat-card class="container">
     <mat-card-title>Excluir usuário</mat-card-title>
     <form class="formulario">
-        <!-- <mat-form-field class="inputId" appearance="outline" color="accent">
-            <mat-label>Id</mat-label>
-            <input type="number" matInput [value]="usuario.id" name="id" disabled>
-        </mat-form-field> -->
+
         <mat-form-field class="inputNome" appearance="outline" color="accent">
             <mat-label>Nome (usuário)</mat-label>
             <input matInput [value]="usuario.nome" name="nome" disabled>
         </mat-form-field>
-        <!-- <mat-form-field class="inputEmpresaId" appearance="outline" color="accent">
-            <mat-label>Empresa ID</mat-label>
-            <input type="number" matInput [value]="usuario.empresa.id" name="empresaId" disabled>
-        </mat-form-field> -->
+
         <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
             <mat-label>Nível de acesso</mat-label>
             <input matInput [value]="usuario.nivelAcesso" name="nivelAcesso" disabled>
         </mat-form-field>
+
         <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
             <mat-label>Empresa</mat-label>
             <input matInput [value]="usuario.empresa.empresa_nome" name="empresa" disabled>
         </mat-form-field>
+
     </form>
     <div class="botoes">
+
         <button [disabled]="buttonExcluirDisabled" class="botaoSalvar" mat-raised-button (click)="deleteUsuario()">
-            <mat-icon fontSet="material-icons-outlined">delete</mat-icon>
+            <mat-icon>delete</mat-icon>
             <span class="textButton">Excluir</span>
         </button>
+
         <button class="botaoCancelar" mat-raised-button (click)="cancel()">
-            <mat-icon fontSet="material-icons-outlined">close</mat-icon>
+            <mat-icon>close</mat-icon>
             <span class="textButton">Cancelar</span>
         </button>
+        
     </div>
 </mat-card>
 
