--- a/src/app/components/usuario/usuario-read/usuario-read.component.html
+++ b/src/app/components/usuario/usuario-read/usuario-read.component.html
@@ -1,4 +1,3 @@
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet" />
 <div>
   <div class="botoes">
     <div class="botoes1">
@@ -8,7 +7,7 @@
       </button>
 
       <button [disabled]="buttonDisabled" mat-raised-button (click)="navigateToNovoUsuario()">
-        <mat-icon fontSet="material-icons-outlined">person_add</mat-icon>
+        <mat-icon>person_add</mat-icon>
         <span class="textButton"> Novo Usuário</span>
       </button>
 
@@ -26,11 +25,6 @@
   </div>
 
   <table mat-table [dataSource]="usuariosEmpresa.content" class="mat-elevation-z4">
-    <!-- id Column -->
-    <!-- <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef>ID</th>
-      <td mat-cell *matCellDef="let row">{{row.id}}</td>
-    </ng-container> -->
 
     <!-- nome Column -->
     <ng-container matColumnDef="nome">
@@ -43,12 +37,6 @@
       <th mat-header-cell *matHeaderCellDef>Senha</th>
       <td mat-cell *matCellDef="let row">{{row.senha}}</td>
     </ng-container>
-
-    <!-- empresaId Column -->
-    <!-- <ng-container matColumnDef="empresaId">
-      <th mat-header-cell *matHeaderCellDef>Empresa ID</th>
-      <td mat-cell *matCellDef="let row">{{row.empresa.id}}</td>
-    </ng-container> -->
 
     <!-- empresa Column -->
     <ng-container matColumnDef="empresa">
